Fix scrollbar width in main.css

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -2,7 +2,7 @@
 @import "./loading.css";
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 5;
 }
 
 ::-webkit-scrollbar-track {
